--- a/index.html
+++ b/index.html
@@ -8,6 +8,88 @@
     <link rel="stylesheet" href="./public/css/style.css">
 </head>
 <body>
-    
+    <!-- header -->
+    <header>
+        <!-- nav -->
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top d-flex">
+            <div class="collapse navbar-collapse ml-5 d-flex justify-content-center" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link text-white" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="#">about us</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="#">menu list</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="#">team</a>
+                </li>
+              </ul>
+              <div class="mr-5 ml-5">
+                  <img src="./public/images/logo.png" alt="">
+              </div>
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link text-white" href="#">reservation</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="#">blog</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="#">testimonials</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="#">contact us</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+          <!-- end nav -->
+        </header>
+        <!-- end header -->
+        <!-- banner -->
+       <section>
+        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+              <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./public/images/banner1.jpg" class="d-block w-100 bright" alt="...">
+                <div class="carousel-caption margecenter">
+                    <h1 class="courgette">whenever you <span>OCCASION</span>,<br><span>taste </span><span>makes </span>it one <br>to <span>remember!</span></h1>
+                    <button type="button" class="btn btn-gain rounded-pill btn-md mt-5 mr-2 p-3 btnbanner">Purchase Theme</button>
+                    <button type="button" class="btn btn-danger rounded-pill btn-md ml-2 mt-5 p-3 btnbanner btnbanner2">Learne more</button>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./public/images/banner1.jpg" class="d-block w-100 bright" alt="...">
+                <div class="carousel-caption margecenter">
+                    <h1 class="courgette">whenever you <span>OCCASION</span>,<br><span>taste </span><span>makes </span>it one <br>to <span>remember!</span></h1>
+                    <button type="button" class="btn btn-gain rounded-pill btn-md mt-5 mr-2 p-3 btnbanner">Purchase Theme</button>
+                    <button type="button" class="btn btn-danger rounded-pill btn-md ml-2 mt-5 p-3 btnbanner btnbanner2">Learne more</button>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./public/images/banner1.jpg" class="d-block w-100 bright" alt="...">
+                <div class="carousel-caption margecenter">
+                    <h1 class="courgette">whenever you <span>OCCASION</span>,<br><span>taste </span><span>makes </span>it one <br>to <span>remember!</span></h1>
+                    <button type="button" class="btn btn-gain rounded-pill btn-md mt-5 mr-2 p-3 btnbanner">Purchase Theme</button>
+                    <button type="button" class="btn btn-danger rounded-pill btn-md ml-2 mt-5 p-3 btnbanner btnbanner2">Learne more</button>
+                </div>
+              </div>
+            </div>
+        </div>
+    </section>
+    <div class="deco"></div>
+    <!-- end banner -->
+
+       <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
