--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-- header -->
     <header>
         <!-- nav -->
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top d-flex">
-            <div class="collapse navbar-collapse ml-5 d-flex justify-content-center" id="navbarNav">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="collapse navbar-collapse test" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
                   <a class="nav-link text-white" href="#">Home</a>
@@ -53,9 +53,9 @@
        <section>
         <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
-              <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-              <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+              <li data-target="#carouselExampleCaptions" id="rond" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleCaptions" id="rond" data-slide-to="1"></li>
+              <li data-target="#carouselExampleCaptions" id="rond" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -87,6 +87,119 @@
     </section>
     <div class="deco"></div>
     <!-- end banner -->
+    <!-- section1 -->
+    <section class="bg">
+      <br><br>
+        <div class="carre">
+            <img src="./public/images/box-left-top.png" id="img1" alt="">
+            <img src="./public/images/box-right-top.png" id="img2" alt="">
+            <img src="./public/images/box-bottom-left.png" id="img3" alt="">
+            <img src="./public/images/box-bottom_right.png" id="img4" alt="">
+          <div class="row row1">
+            <div class="col col1">
+              <h2><span>our </span><span>story</span></h2>
+              <img src="./public/images/decoration_line.png" alt="">
+              <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id nisi possimus Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, eaque. Soluta quod saepe nulla inventore animi eum ex molestias quasi. delectus consectetur. Inventore, quibusdam. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quas, suscipit consequatur ea tempora commodi cumque ipsam, delectus inventore, rerum quaerat ex soluta praesentium magni molestiae itaque quidem minus. Esse?</p>
+              <h2><span>our </span><span>menu list</span></h2>
+              <img src="./public/images/decoration_line.png" alt="">
+            </div>
+          </div>
+          <!-- collapse -->
+          <div class="d-flex">
+          <div class="carre2 text-center mt-5" tabindex="-1">
+            <i class="fas fa-mug-hot fa-4x mt-4 mb-4"data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample"></i>
+            <h2 class="text-dark text-capitalize">breakfast</h2>
+          </div>
+          <div class="collapse" id="collapseExample">
+            <div class="card card-body d-flex border-0">
+            <div class="row d-flex">
+              <div class="col-6 d-flex p-0">
+                <img src="./public/images/menu_image_1.jpg" alt="" class="roundedimg">
+                <div class="d-flex flex-column point mt-3">
+                <p class="mt-4"><span class="font-weight-bold lineh">Lorem ipsum dolor sit amet.</span> <br>
+                Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit. Qui, cumque!</Lorem></p>
+              </div>
+              <span class="dollars">&#36;25</span>
+              </div>
+              <div class="col-6 d-flex p-0">
+                <img src="./public/images/menu_image_1.jpg" alt="" class="roundedimg">
+                <div class="d-flex flex-column point mt-3">
+                <p class="mt-4"><span class="font-weight-bold lineh">Lorem ipsum dolor sit amet.</span> <br>
+                Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit. Qui, cumque!</Lorem></p>
+              </div>
+              <span class="dollars">&#36;25</span>
+              </div>
+              <div class="col-6 d-flex p-0">
+                <img src="./public/images/menu_image_1.jpg" alt="" class="roundedimg">
+                <div class="d-flex flex-column point mt-3">
+                <p class="mt-4"><span class="font-weight-bold lineh">Lorem ipsum dolor sit amet.</span> <br>
+                Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit. Qui, cumque!</Lorem></p>
+              </div>
+              <span class="dollars">&#36;25</span>
+              </div>
+              <div class="col-6 d-flex p-0">
+                <img src="./public/images/menu_image_1.jpg" alt="" class="roundedimg">
+                <div class="d-flex flex-column point mt-3">
+                <p class="mt-4"><span class="font-weight-bold lineh">Lorem ipsum dolor sit amet.</span> <br>
+                Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit. Qui, cumque!</Lorem></p>
+              </div>
+              <span class="dollars">&#36;25</span>
+              </div>
+              <div class="col-6 d-flex p-0">
+                <img src="./public/images/menu_image_1.jpg" alt="" class="roundedimg">
+                <div class="d-flex flex-column point mt-3">
+                <p class="mt-4"><span class="font-weight-bold lineh">Lorem ipsum dolor sit amet.</span> <br>
+                Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit. Qui, cumque!</Lorem></p>
+              </div>
+              <span class="dollars">&#36;25</span>
+              </div>
+              <div class="col-6 d-flex p-0">
+                <img src="./public/images/menu_image_1.jpg" alt="" class="roundedimg">
+                <div class="d-flex flex-column point mt-3">
+                <p class="mt-4"><span class="font-weight-bold lineh">Lorem ipsum dolor sit amet.</span> <br>
+                Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit. Qui, cumque!</Lorem></p>
+              </div>
+              <span class="dollars">&#36;25</span>
+              </div>
+              <div class="col-6 d-flex p-0">
+                <img src="./public/images/menu_image_1.jpg" alt="" class="roundedimg">
+                <div class="d-flex flex-column point mt-3">
+                <p class="mt-4"><span class="font-weight-bold lineh">Lorem ipsum dolor sit amet.</span> <br>
+                Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit. Qui, cumque!</Lorem></p>
+              </div>
+              <span class="dollars">&#36;25</span>
+              </div>
+              <div class="col-6 d-flex p-0">
+                <img src="./public/images/menu_image_1.jpg" alt="" class="roundedimg">
+                <div class="d-flex flex-column point mt-3">
+                <p class="mt-4"><span class="font-weight-bold lineh">Lorem ipsum dolor sit amet.</span> <br>
+                Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit. Qui, cumque!</Lorem></p>
+              </div>
+              <span class="dollars">&#36;25</span>
+              </div>
+              <div class="col-6 d-flex p-0">
+                <img src="./public/images/menu_image_1.jpg" alt="" class="roundedimg">
+                <div class="d-flex flex-column point mt-3">
+                <p class="mt-4"><span class="font-weight-bold lineh">Lorem ipsum dolor sit amet.</span> <br>
+                Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit. Qui, cumque!</Lorem></p>
+              </div>
+              <span class="dollars">&#36;25</span>
+              </div>
+              <div class="col-6 d-flex p-0">
+                <img src="./public/images/menu_image_1.jpg" alt="" class="roundedimg">
+                <div class="d-flex flex-column point mt-3">
+                <p class="mt-4"><span class="font-weight-bold lineh">Lorem ipsum dolor sit amet.</span> <br>
+                Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit. Qui, cumque!</Lorem></p>
+              </div>
+              <span class="dollars">&#36;25</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
+<!-- collapse2 -->
+    </section>
+ 
 
        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
