--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-- header -->
     <header>
         <!-- nav -->
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="collapse navbar-collapse test" id="navbarNav">
+        <nav class="navbar navbar-expand-lg navbar-light d-flex">
+            <div class="collapse navbar-collapse d-flex justify-content-center test" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
                   <a class="nav-link text-white" href="#">Home</a>
@@ -90,7 +90,7 @@
     <!-- section1 -->
     <section class="bg">
       <br><br>
-        <div class="carre">
+      <div class="carre">
             <img src="./public/images/box-left-top.png" id="img1" alt="">
             <img src="./public/images/box-right-top.png" id="img2" alt="">
             <img src="./public/images/box-bottom-left.png" id="img3" alt="">
@@ -106,100 +106,163 @@
           </div>
           <!-- collapse -->
           <div class="d-flex">
-          <div class="carre2 text-center mt-5" tabindex="-1">
-            <i class="fas fa-mug-hot fa-4x mt-4 mb-4"data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample"></i>
-            <h2 class="text-dark text-capitalize">breakfast</h2>
-          </div>
-          <div class="collapse" id="collapseExample">
-            <div class="card card-body d-flex border-0">
-            <div class="row d-flex">
-              <div class="col-6 d-flex p-0">
-                <img src="./public/images/menu_image_1.jpg" alt="" class="roundedimg">
-                <div class="d-flex flex-column point mt-3">
-                <p class="mt-4"><span class="font-weight-bold lineh">Lorem ipsum dolor sit amet.</span> <br>
-                Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit. Qui, cumque!</Lorem></p>
-              </div>
-              <span class="dollars">&#36;25</span>
-              </div>
-              <div class="col-6 d-flex p-0">
-                <img src="./public/images/menu_image_1.jpg" alt="" class="roundedimg">
-                <div class="d-flex flex-column point mt-3">
-                <p class="mt-4"><span class="font-weight-bold lineh">Lorem ipsum dolor sit amet.</span> <br>
-                Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit. Qui, cumque!</Lorem></p>
-              </div>
-              <span class="dollars">&#36;25</span>
-              </div>
-              <div class="col-6 d-flex p-0">
-                <img src="./public/images/menu_image_1.jpg" alt="" class="roundedimg">
-                <div class="d-flex flex-column point mt-3">
-                <p class="mt-4"><span class="font-weight-bold lineh">Lorem ipsum dolor sit amet.</span> <br>
-                Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit. Qui, cumque!</Lorem></p>
-              </div>
-              <span class="dollars">&#36;25</span>
-              </div>
-              <div class="col-6 d-flex p-0">
-                <img src="./public/images/menu_image_1.jpg" alt="" class="roundedimg">
-                <div class="d-flex flex-column point mt-3">
-                <p class="mt-4"><span class="font-weight-bold lineh">Lorem ipsum dolor sit amet.</span> <br>
-                Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit. Qui, cumque!</Lorem></p>
-              </div>
-              <span class="dollars">&#36;25</span>
-              </div>
-              <div class="col-6 d-flex p-0">
-                <img src="./public/images/menu_image_1.jpg" alt="" class="roundedimg">
-                <div class="d-flex flex-column point mt-3">
-                <p class="mt-4"><span class="font-weight-bold lineh">Lorem ipsum dolor sit amet.</span> <br>
-                Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit. Qui, cumque!</Lorem></p>
-              </div>
-              <span class="dollars">&#36;25</span>
-              </div>
-              <div class="col-6 d-flex p-0">
-                <img src="./public/images/menu_image_1.jpg" alt="" class="roundedimg">
-                <div class="d-flex flex-column point mt-3">
-                <p class="mt-4"><span class="font-weight-bold lineh">Lorem ipsum dolor sit amet.</span> <br>
-                Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit. Qui, cumque!</Lorem></p>
-              </div>
-              <span class="dollars">&#36;25</span>
-              </div>
-              <div class="col-6 d-flex p-0">
-                <img src="./public/images/menu_image_1.jpg" alt="" class="roundedimg">
-                <div class="d-flex flex-column point mt-3">
-                <p class="mt-4"><span class="font-weight-bold lineh">Lorem ipsum dolor sit amet.</span> <br>
-                Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit. Qui, cumque!</Lorem></p>
-              </div>
-              <span class="dollars">&#36;25</span>
-              </div>
-              <div class="col-6 d-flex p-0">
-                <img src="./public/images/menu_image_1.jpg" alt="" class="roundedimg">
-                <div class="d-flex flex-column point mt-3">
-                <p class="mt-4"><span class="font-weight-bold lineh">Lorem ipsum dolor sit amet.</span> <br>
-                Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit. Qui, cumque!</Lorem></p>
-              </div>
-              <span class="dollars">&#36;25</span>
-              </div>
-              <div class="col-6 d-flex p-0">
-                <img src="./public/images/menu_image_1.jpg" alt="" class="roundedimg">
-                <div class="d-flex flex-column point mt-3">
-                <p class="mt-4"><span class="font-weight-bold lineh">Lorem ipsum dolor sit amet.</span> <br>
-                Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit. Qui, cumque!</Lorem></p>
-              </div>
-              <span class="dollars">&#36;25</span>
-              </div>
-              <div class="col-6 d-flex p-0">
-                <img src="./public/images/menu_image_1.jpg" alt="" class="roundedimg">
-                <div class="d-flex flex-column point mt-3">
-                <p class="mt-4"><span class="font-weight-bold lineh">Lorem ipsum dolor sit amet.</span> <br>
-                Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit. Qui, cumque!</Lorem></p>
-              </div>
-              <span class="dollars">&#36;25</span>
-              </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12"><div class="carre2 text-center mt-5" tabindex="-1">
+                        <i class="fas fa-mug-hot fa-4x mt-4 mb-4"data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample"></i>
+                        <h2 class="text-dark text-capitalize">breakFast</h2>
+                    </div></div>
+                </div>
+                <div class="row">
+                    <div class="col-12"><div class="carre2 text-center mt-5" tabindex="-1">
+                        <i class="fas fa-hamburger fa-4x mt-4 mb-4"data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample"></i>
+                        <h2 class="text-dark text-capitalize">lunch</h2>
+                    </div></div>
+                </div>
+                <div class="row">
+                    <div class="col-12"><div class="carre2 text-center mt-5" tabindex="-1">
+                        <i class="fas fa-concierge-bell fa-4x mt-4 mb-4"data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample"></i>
+                        <h2 class="text-dark text-capitalize">snacks</h2>
+                    </div></div>
+                </div>
+                <div class="row">
+                    <div class="col-12"><div class="carre2 text-center mt-5 marg" tabindex="-1">
+                        <i class="fas fa-mug-hot fa-4x mt-4 mb-4"data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample"></i>
+                        <h2 class="text-dark text-capitalize">dinner</h2>
+                    </div></div>
+                </div>
+            </div>
+            <div class="collapse" id="collapseExample">
+              <div class="card card-body d-flex border-0">
+                <div class="row d-flex">
+                    <div class="col-lg-6 col-md-12 col-sm-12 d-flex p-0">
+                        <div class="d-flex point">
+                            <div class="d-flex align-items-center"><img src="./public/images/menu_image_1.jpg" alt="" class="rond"></div>
+                            <div class="d-flex flex-column align-self-center ">
+                                <p> <span class="font-weight-bold">Lorem ipsum dolor sit amet </span> <br> Nemo nobis distinctio quaerat <br>dolore, recusandae facere. </p>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-center"><span class="dollars mt-4 ml-5">&#36;25</span></div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-sm-12 d-flex p-0"> ​
+                        <div class="d-flex point">
+                            <div class="d-flex align-items-center"><img src="./public/images/menu_image_1.jpg" alt="" class="rond"></div>
+                            <div class="d-flex flex-column align-self-center">
+                              <p> <span class="font-weight-bold">Lorem ipsum dolor sit amet </span> <br> Nemo nobis distinctio quaerat <br>dolore, recusandae facere. </p>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-center"><span class="dollars mt-4 ml-5">&#36;35</span></div>
+                        </div>
+                    </div>​
+                    <div class="col-lg-6 col-md-12 col-sm-12 d-flex p-0">
+                        <div class="d-flex point">
+                            <div class="d-flex align-items-center"><img src="./public/images/menu_image_1.jpg" alt="" class="rond"></div>
+                            <div class="d-flex flex-column align-self-center">
+                              <p> <span class="font-weight-bold">Lorem ipsum dolor sit amet </span> <br> Nemo nobis distinctio quaerat <br>dolore, recusandae facere. </p>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-center"><span class="dollars mt-4 ml-5">&#36;25</span></div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-sm-12 d-flex p-0">
+                        <div class="d-flex point">
+                            <div class="d-flex align-items-center"><img src="./public/images/menu_image_1.jpg" alt="" class="rond"></div>
+                            <div class="d-flex flex-column align-self-center">
+                              <p> <span class="font-weight-bold">Lorem ipsum dolor sit amet </span> <br> Nemo nobis distinctio quaerat <br>dolore, recusandae facere. </p>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-center"><span class="dollars mt-4 ml-5">&#36;35</span></div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-sm-12 d-flex p-0">
+                        <div class="d-flex point">
+                            <div class="d-flex align-items-center"><img src="./public/images/menu_image_1.jpg" alt="" class="rond"></div>
+                            <div class="d-flex flex-column align-self-center">
+                              <p> <span class="font-weight-bold">Lorem ipsum dolor sit amet </span> <br> Nemo nobis distinctio quaerat <br>dolore, recusandae facere. </p>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-center"><span class="dollars mt-4 ml-5">&#36;25</span></div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-sm-12 d-flex p-0">
+                        <div class="d-flex point">
+                            <div class="d-flex align-items-center"><img src="./public/images/menu_image_1.jpg" alt="" class="rond"></div>
+                            <div class="d-flex flex-column align-self-center">
+                              <p> <span class="font-weight-bold">Lorem ipsum dolor sit amet </span> <br> Nemo nobis distinctio quaerat <br>dolore, recusandae facere. </p>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-center"><span class="dollars mt-4 ml-5">&#36;35</span></div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-sm-12 d-flex p-0">
+                        <div class="d-flex point">
+                            <div class="d-flex align-items-center"><img src="./public/images/menu_image_1.jpg" alt="" class="rond"></div>
+                            <div class="d-flex flex-column align-self-center">
+                              <p> <span class="font-weight-bold">Lorem ipsum dolor sit amet </span> <br> Nemo nobis distinctio quaerat <br>dolore, recusandae facere. </p>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-center"><span class="dollars mt-4 ml-5">&#36;25</span></div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-sm-12 d-flex p-0">
+                        <div class="d-flex point">
+                            <div class="d-flex align-items-center"><img src="./public/images/menu_image_1.jpg" alt="" class="rond"></div>
+                            <div class="d-flex flex-column align-self-center">
+                              <p> <span class="font-weight-bold">Lorem ipsum dolor sit amet </span> <br> Nemo nobis distinctio quaerat <br>dolore, recusandae facere. </p>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-center"><span class="dollars mt-4 ml-5">&#36;35</span></div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-sm-12 d-flex p-0"> ​
+                        <div class="d-flex point">
+                            <div class="d-flex align-items-center"><img src="./public/images/menu_image_1.jpg" alt="" class="rond"></div>
+                            <div class="d-flex flex-column align-self-center">
+                              <p> <span class="font-weight-bold">Lorem ipsum dolor sit amet </span> <br> Nemo nobis distinctio quaerat <br>dolore, recusandae facere. </p>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-center"><span class="dollars mt-4 ml-5">&#36;25</span></div>
+                        </div>
+                    </div> ​
+                    <div class="col-lg-6 col-md-12 col-sm-12 d-flex p-0">
+                        <div class="d-flex point">
+                            <div class="d-flex align-items-center"><img src="./public/images/menu_image_1.jpg" alt="" class="rond"></div>
+                            <div class="d-flex flex-column align-self-center">
+                              <p> <span class="font-weight-bold">Lorem ipsum dolor sit amet </span> <br> Nemo nobis distinctio quaerat <br>dolore, recusandae facere. </p>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-center"><span class="dollars mt-4 ml-5">&#36;35</span></div>
+                        </div>
+                    </div>
+                </div>
             </div>
           </div>
         </div>
-        </div>
-<!-- collapse2 -->
+        <!-- FIN COLLAPSE -->
+            <img src="./public/images/decoration_line.png" id="lastbell" alt="">
     </section>
- 
+    <!-- section1bis -->
+    <div id="bgteam">
+      <div class="row row1">
+        <div class="col col1">
+          <h2><span>our </span><span class="text-white">story</span></h2>
+          <img src="./public/images/decoration_line.png" alt="">
+        </div>
+      </div>
+      <div class="container d-flex">
+        <div class="row d-flex mt-5">
+          <div class="col-lg-3 col-md-3 col-sm-12 mt-4">
+            <img src="./public/images/chef1.png" class="border-bottom border-secondary" alt="">
+            <p class="text-white text-center">Lorem, ipsum.</p>
+          </div>
+          <div class="col-lg-3 col-md-3 col-sm-12 mt-4">
+            <img src="./public/images/chef2.png"class="border-bottom border-secondary" alt="">
+            <p class="text-white text-center">Lorem, ipsum.</p>
+          </div>
+          <div class="col-lg-3 col-md-3 col-sm-12 mt-4">
+            <img src="./public/images/chef3.png" class="border-bottom border-secondary" alt="">
+            <p class="text-white text-center">Lorem, ipsum.</p>
+          </div>
+          <div class="col-lg-3 col-md-3 col-sm-12 mt-4">
+            <img src="./public/images/chef4.png" class="border-bottom border-secondary" alt="">
+            <p class="text-white text-center">Lorem, ipsum.</p>
+          </div>
+        </div>
+      </div>
+     </div>
+    <!-- section1fini -->
+
 
        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
