--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="carousel-caption margecenter">
                     <h1 class="courgette">whenever you <span>OCCASION</span>,<br><span>taste </span><span>makes </span>it one <br>to <span>remember!</span></h1>
                     <button type="button" class="btn btn-gain rounded-pill btn-md mt-5 mr-2 p-3 btnbanner">Purchase Theme</button>
-                    <button type="button" class="btn btn-danger rounded-pill btn-md ml-2 mt-5 p-3 btnbanner btnbanner2">Learne more</button>
+                    <button type="button" class="btn btn-adam rounded-pill btn-md ml-2 mt-5 p-3 btnbanner btnbanner2">Learne more</button>
                 </div>
               </div>
               <div class="carousel-item">
@@ -71,7 +71,7 @@
                 <div class="carousel-caption margecenter">
                     <h1 class="courgette">whenever you <span>OCCASION</span>,<br><span>taste </span><span>makes </span>it one <br>to <span>remember!</span></h1>
                     <button type="button" class="btn btn-gain rounded-pill btn-md mt-5 mr-2 p-3 btnbanner">Purchase Theme</button>
-                    <button type="button" class="btn btn-danger rounded-pill btn-md ml-2 mt-5 p-3 btnbanner btnbanner2">Learne more</button>
+                    <button type="button" class="btn btn-adam rounded-pill btn-md ml-2 mt-5 p-3 btnbanner btnbanner2">Learne more</button>
                 </div>
               </div>
               <div class="carousel-item">
@@ -79,7 +79,7 @@
                 <div class="carousel-caption margecenter">
                     <h1 class="courgette">whenever you <span>OCCASION</span>,<br><span>taste </span><span>makes </span>it one <br>to <span>remember!</span></h1>
                     <button type="button" class="btn btn-gain rounded-pill btn-md mt-5 mr-2 p-3 btnbanner">Purchase Theme</button>
-                    <button type="button" class="btn btn-danger rounded-pill btn-md ml-2 mt-5 p-3 btnbanner btnbanner2">Learne more</button>
+                    <button type="button" class="btn btn-adam rounded-pill btn-md ml-2 mt-5 p-3 btnbanner btnbanner2">Learne more</button>
                 </div>
               </div>
             </div>
@@ -235,7 +235,7 @@
     <!-- section1bis -->
     <div id="bgteam">
       <div class="row row1">
-        <div class="col col1">
+        <div class="col col1 mt-5">
           <h2><span>our </span><span class="text-white">story</span></h2>
           <img src="./public/images/decoration_line.png" alt="">
         </div>
@@ -262,6 +262,153 @@
       </div>
      </div>
     <!-- section1fini -->
+    <!-- section2 form -->
+    <section class="bg">
+      <br><br>
+      <div class="carre">
+            <img src="./public/images/box-left-top-grey.png" id="img1" alt="">
+            <img src="./public/images/box-right-top-grey.png" id="img2" alt="">
+            <img src="./public/images/box-bottom-left-grey.png" id="img3" alt="">
+            <img src="./public/images/box-bottom_right-grey.png" id="img4" alt="">
+          <div class="row row1">
+            <div class="col col1">
+              <h2><span>book </span><span>your Table</span></h2>
+              <img src="./public/images/decoration_line.png" alt="">
+              <div class="container taille bgform">
+              <p class="text-white">Lorem ipsum dolor sit amet Lorem, ipsum.</p>
+              <div>
+                <div class="row">
+                  <div class="col">
+                    <form class="ml-5 mr-5">
+                      <div class="form-group">
+                        <input type="name" class="form-control" id="formGroupExampleInput" placeholder="Enter Full Name">
+                      </div>
+                      <div class="form-group">
+                        <input type="tel" class="form-control" id="formGroupExampleInput2" placeholder="Phone Number">
+                      </div>
+                    </form>
+                    <form class="ml-5 mr-5">
+                      <div class="form-group">
+                        <input type="date" class="form-control" id="formGroupExampleInput" placeholder="Date">
+                      </div>
+                      <div class="form-group">
+                        <select class="form-control" id="exampleFormControlSelect1">
+                          <option>Occasion</option>
+                          <option>2</option>
+                          <option>3</option>
+                          <option>4</option>
+                          <option>5</option>
+                        </select>
+                      </div>
+                    </form>
+                  </div>
+                  <div class="col">
+                    <form class="mr-5">
+                      <div class="form-group">
+                        <input type="number" class="form-control" id="formGroupExampleInput" placeholder="Enter Id">
+                      </div>
+                      <div class="form-group">
+                        <select class="form-control" id="exampleFormControlSelect1">
+                          <option>No Of Person</option>
+                          <option>2</option>
+                          <option>3</option>
+                          <option>4</option>
+                          <option>5</option>
+                        </select>
+                      </div>
+                    </form>
+                    <form class="mr-5">
+                      <div class="form-group">
+                        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Time">
+                      </div>
+                      <div class="form-group">
+                        <select class="form-control" id="exampleFormControlSelect1">
+                          <option>Cuisine</option>
+                          <option>2</option>
+                          <option>3</option>
+                          <option>4</option>
+                          <option>5</option>
+                        </select>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+                <div class="row row1">
+                  <div class="col col1">
+                  <button type="button" class="btn btn-adam rounded-pill btn-md mt-5 mb-5 p-3 btnbanner btnbanner2">BOOK NOW</button>
+                  </div>
+                  </div>
+              </div>
+              </div>
+              <h2 class="mt-5"><span>our </span><span>blog</span></h2>
+              <img src="./public/images/decoration_line.png" alt="">
+            </div>
+          </div>
+            <div class="row row1">
+              <div class="col-lg-6 col-md-6 col-sm-12 col1 p-0">
+                <img class="imginsta" src="./public/images/menu_image_3.jpg" alt="">
+                <button type="button" class="absol btn btn-adam rounded btn-md p-2 btnbanner btnbanner2"><b>Lorem </b>ipsum dolor <b>sit</b> amet <b>consectetur</b>.</button>
+                <div class="row row2">
+                  <div class="col-lg-6 col-md-6 col-sm-12 col2 p-0">
+                    <br><br>
+                    <h5><b>Lorem Ipsum</b></h5><br>
+                    <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet..</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6 col-md-6 col-sm-12 col1 p-0">
+                <img class="imginsta" src="./public/images/menu_image_4.jpg" alt="">
+                <button type="button" class="absol btn btn-adam rounded btn-md p-2 btnbanner btnbanner2"><b>Lorem </b>ipsum dolor <b>sit</b> amet <b>consectetur</b>.</button>
+                <div class="row row2">
+                  <div class="col-lg-6 col-md-6 col-sm-12 col2 p-0">
+                    <br><br>
+                    <h5><b>Lorem Ipsum</b></h5><br>
+                    <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet..</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+                <div class="row row1">
+                  <div class="col col1">
+                <button type="button" class="btn btn-adam rounded-pill btn-md mb-5 p-3 btnbanner btnbanner2">KNOW MORE</button>
+                </div>
+                </div>
+          </div>
+     </section>
+     <!-- testimonials -->
+     <div id="bgtesti">
+      <div class="row row1">
+        <div class="col col1 mt-5">
+          <h2><span>client </span><span class="text-white">testimonials</span></h2>
+          <img src="./public/images/decoration_line.png" alt="">
+        </div>
+      </div>
+      <div class="container d-flex">
+        <div class="row d-flex justify-content-center mt-5">
+          <div class="col-lg-2 col-md-6 col-sm-12">
+            <img src="./public/images/testimonial1.jpg" class="rond" alt="">
+          </div>
+          <div class="col-lg-2 col-md-6 col-sm-12 ml-4 mr-4 mt-4 mb-3 border border-secondary rounded text-white">
+            <h5 class="mt-2"><b>Lorem Ipsum</b></h5>
+            <h6 class="text-adam">Manager</h6>
+            <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet..</p>
+          </div>
+            <div class="col-lg-2 col-md-6 col-sm-12 ml-4 mr-4 mt-4 mb-3 border border-secondary rounded text-white">
+              <h5 class="mt-2"><b>Lorem Ipsum</b></h5>
+              <h6 class="text-adam">Manager</h6>
+              <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="col-lg-2 col-md-6 col-sm-12">
+              <img src="./public/images/testimonial1.jpg" class="rond" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+     </div>
+     <!-- section2fin -->
+
+
+
 
 
        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
