--- a/index.html
+++ b/index.html
@@ -391,12 +391,12 @@
           <div class="col-lg-2 col-md-6 col-sm-12 ml-4 mr-4 mt-4 mb-3 border border-secondary rounded text-white">
             <h5 class="mt-2"><b>Lorem Ipsum</b></h5>
             <h6 class="text-adam">Manager</h6>
-            <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet..</p>
+            <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit</p>
           </div>
             <div class="col-lg-2 col-md-6 col-sm-12 ml-4 mr-4 mt-4 mb-3 border border-secondary rounded text-white">
               <h5 class="mt-2"><b>Lorem Ipsum</b></h5>
               <h6 class="text-adam">Manager</h6>
-              <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet.</p>
+              <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit</p>
             </div>
             <div class="col-lg-2 col-md-6 col-sm-12">
               <img src="./public/images/testimonial1.jpg" class="rond" alt="">
@@ -406,6 +406,27 @@
       </div>
      </div>
      <!-- section2fin -->
+     <!-- section contact -->
+     <div class="bg2">
+       <div class="row d-flex">
+         <div class="col mt-5 mb-5 d-flex justify-content-center flex-column align-items-center">
+          <h2><span>our </span><span>contact</span></h2>
+          <img src="./public/images/decoration_line.png" alt="">
+          <div class="rectanglered mt-5 text-center text-white bg-adam roundedred">
+            <i class="fas fa-map-marker-alt fa-2x mt-4"></i>
+            <p class="ml-4 mr-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Totam, beatae.</p>
+            <hr class="hr">
+            <i class="fas fa-phone-alt fa-2x"></i>
+            <p>Lorem ipsum dolor</p>
+            <hr class="hr">
+            <i class="fas fa-envelope fa-3x"></i>
+            <p>Lorem ipsum dolor</p>
+          </div>
+         </div>
+       </div>
+     </div>
+    <!-- contactfin -->
+    <!-- footer -->
 
 
 
