--- a/index.html
+++ b/index.html
@@ -319,15 +319,12 @@
                     </form>
                     <form class="mr-5">
                       <div class="form-group">
-                        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Time">
+                        <input type="time" class="form-control" id="formGroupExampleInput" placeholder="Time">
                       </div>
                       <div class="form-group">
                         <select class="form-control" id="exampleFormControlSelect1">
                           <option>Cuisine</option>
                           <option>2</option>
-                          <option>3</option>
-                          <option>4</option>
-                          <option>5</option>
                         </select>
                       </div>
                     </form>
@@ -425,13 +422,58 @@
          </div>
        </div>
      </div>
-    <!-- contactfin -->
+    <!-- contact fin -->
     <!-- footer -->
-
-
-
-
-
+    <section class="bgfooter">
+      <div class="decoftr"></div>
+      <div class="row d-flex mt-4">
+        <div class="col d-flex ml-5 flex-column text-white">
+          <h1 class="mb-3 font">about us</h1>
+            <p>Lorem ipsum ditate obcaecati quod nobis expedita? Necessitatibus quas perferendis, fugiat nemo dignissimos qui dolores rem, quaerat officia facilis sunt asperiores totam ipsam ad minus aliquid. Obcaecati, corporis! Consequuntur.</p>
+          <div class="mb-4">
+            <i class="fab fa-facebook-f fa-2x p-3"></i>
+            <i class="fab fa-google-plus-g fa-2x p-3"></i>
+            <i class="fab fa-pinterest-p fa-2x p-3"></i>
+            <i class="fab fa-linkedin-in fa-2x p-3"></i>
+          </div>
+        </div>
+        <div class="col d-flex flex-column text-white">
+          <h1 class="mb-3 font">instagram</h1>
+          <div class="row">
+            <div class="col"><img src="./public/images/instragram_gallery_img1.jpg" alt=""></div>
+            <div class="col"><img src="./public/images/instragram_gallery_img2.jpg" alt=""></div>
+            <div class="col"><img src="./public/images/instragram_gallery_img1.jpg" alt=""></div>
+            <div class="col"><img src="./public/images/instragram_gallery_img2.jpg" alt=""></div>
+          </div>
+          <div class="row mt-2 mb-4">
+            <div class="col"><img src="./public/images/instragram_gallery_img2.jpg" alt=""></div>
+            <div class="col"><img src="./public/images/instragram_gallery_img1.jpg" alt=""></div>
+            <div class="col"><img src="./public/images/instragram_gallery_img2.jpg" alt=""></div>
+            <div class="col"><img src="./public/images/instragram_gallery_img1.jpg" alt=""></div>
+          </div>
+        </div>
+        <div class="col d-flex flex-column text-white">
+          <h1 class="mb-3 font">popular tags</h1>
+          <div class="row mb-3">
+            <div class="col-lg-3"><button type="button" class="btn btn-adam rounded-pill btnftr">Restaurant</button></div>
+            <div class="col-lg-4"><button type="button" class="btn btn-adam rounded-pill btnftr">Responsive Design</button></div>
+            <div class="col-lg-1"><button type="button" class="btn btn-adam rounded-pill btnftr">Hotel</button></div>
+          </div>
+          <div class="row mb-3">
+            <div class="col-lg-3"><button type="button" class="btn btn-adam rounded-pill btnftr">Blog Section</button></div>
+            <div class="col-lg-2"><button type="button" class="btn btn-adam rounded-pill btnftr">SEO</button></div>
+            <div class="col-lg-2"><button type="button" class="btn btn-adam rounded-pill btnftr">Cuisine</button></div>
+          </div>
+          <div class="row">
+            <div class="col-lg-2"><button type="button" class="btn btn-adam rounded-pill btnftr">Graphic</button></div>
+            <div class="col-lg-2"><button type="button" class="btn btn-adam rounded-pill btnftr">Food</button></div>
+          </div>
+        </div>
+      </div>
+      <div class="bg-adam"><br><br></div>
+    </section>
+    <!-- end footer -->
+    <!-- js -->
        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
