--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
           <div class="row row1">
             <div class="col col1 mt-5">
               <h2><span>our </span><span>story</span></h2>
-              <img src="./public/images/decoration_line.png" alt="">
+              <img class="wbell" src="./public/images/decoration_line.png" alt="">
               <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id nisi possimus Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, eaque. Soluta quod saepe nulla inventore animi eum ex molestias quasi. delectus consectetur. Inventore, quibusdam. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quas, suscipit consequatur ea tempora commodi cumque ipsam, delectus inventore, rerum quaerat ex soluta praesentium magni molestiae itaque quidem minus. Esse?</p>
               <h2><span>our </span><span>menu list</span></h2>
-              <img src="./public/images/decoration_line.png" alt="">
+              <img class="wbell" src="./public/images/decoration_line.png" alt="">
             </div>
           </div>
           <!-- collapse -->
@@ -238,7 +238,7 @@
         </div>
         <div class="row row1">
           <div class="col col1">
-            <img src="./public/images/decoration_line.png" alt="">
+            <img class="wbell" src="./public/images/decoration_line.png" alt="">
           </div>
         </div>
       </section>
@@ -248,7 +248,7 @@
       <div class="row row1">
         <div class="col-lg col-md col-sm col1 mt-5">
           <h2><span>our </span><span class="text-white">story</span></h2>
-          <img src="./public/images/decoration_line.png" alt="">
+          <img class="wbell" src="./public/images/decoration_line.png" alt="">
         </div>
       </div>
         <div class="row row2 mt-5">
@@ -279,15 +279,15 @@
             <img src="./public/images/box-bottom-left-grey.png" id="img3" alt="">
             <img src="./public/images/box-bottom_right-grey.png" id="img4" alt="">
           <div class="row row1">
-            <div class="col col1">
-              <h2><span>book </span><span>your Table</span></h2>
-              <img src="./public/images/decoration_line.png" alt="">
+            <div class="col col1 mt-5">
+              <h2 class="text-center"><span>book </span><span>your Table</span></h2>
+              <img class="wbell" src="./public/images/decoration_line.png" alt="">
               <div class="container taille bgform">
               <p class="text-white">Lorem ipsum dolor sit amet Lorem, ipsum.</p>
               <div>
                 <div class="row">
                   <div class="col">
-                    <form class="ml-5 mr-5">
+                    <form>
                       <div class="form-group">
                         <input type="name" class="form-control" id="formGroupExampleInput" placeholder="Enter Full Name">
                       </div>
@@ -295,7 +295,7 @@
                         <input type="tel" class="form-control" id="formGroupExampleInput2" placeholder="Phone Number">
                       </div>
                     </form>
-                    <form class="ml-5 mr-5">
+                    <form>
                       <div class="form-group">
                         <input type="date" class="form-control" id="formGroupExampleInput" placeholder="Date">
                       </div>
@@ -308,7 +308,7 @@
                     </form>
                   </div>
                   <div class="col">
-                    <form class="mr-5">
+                    <form>
                       <div class="form-group">
                         <input type="number" class="form-control" id="formGroupExampleInput" placeholder="Enter Id">
                       </div>
@@ -319,7 +319,7 @@
                         </select>
                       </div>
                     </form>
-                    <form class="mr-5">
+                    <form">
                       <div class="form-group">
                         <input type="time" class="form-control" id="formGroupExampleInput" placeholder="Time">
                       </div>
@@ -329,62 +329,63 @@
                           <option>2</option>
                         </select>
                       </div>
-                    </form>
+                    </form">
                   </div>
                 </div>
                 <div class="row row1">
                   <div class="col col1">
                   <button type="button" class="btn btn-adam rounded-pill btn-md mt-5 mb-5 p-3 btnbanner btnbanner2">BOOK NOW</button>
                   </div>
-                  </div>
+               </div>
               </div>
               </div>
+            <!-- blog -->
               <h2 class="mt-5"><span>our </span><span>blog</span></h2>
-              <img src="./public/images/decoration_line.png" alt="">
+              <img class="mb-5 wbell" src="./public/images/decoration_line.png" alt="">
             </div>
           </div>
-            <div class="row row1">
-              <div class="col-lg-6 col-md-6 col-sm-12 col1 p-0">
-                <img class="imginsta" src="./public/images/menu_image_3.jpg" alt="">
-                <button type="button" class="absol btn btn-adam rounded btn-md p-2 btnbanner btnbanner2"><b>Lorem </b>ipsum dolor <b>sit</b> amet <b>consectetur</b>.</button>
-                <div class="row row2">
-                  <div class="col-lg-6 col-md-6 col-sm-12 col2 p-0">
-                    <br><br>
-                    <h5><b>Lorem Ipsum</b></h5><br>
-                    <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet..</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-6 col-md-6 col-sm-12 col1 p-0">
-                <img class="imginsta" src="./public/images/menu_image_4.jpg" alt="">
-                <button type="button" class="absol btn btn-adam rounded btn-md p-2 btnbanner btnbanner2"><b>Lorem </b>ipsum dolor <b>sit</b> amet <b>consectetur</b>.</button>
-                <div class="row row2">
-                  <div class="col-lg-6 col-md-6 col-sm-12 col2 p-0">
-                    <br><br>
-                    <h5><b>Lorem Ipsum</b></h5><br>
-                    <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet..</p>
-                  </div>
-                </div>
+         <div class="container">
+          <div class="row row2">
+          <div class="col-lg-6 col-md-6 col-sm-12 col2 card border-0">
+            <img width="auto" src="./public/images/blog_img1.jpg" alt="" class="card-img-top imginsta">
+            <div class="card-body">
+              <div class="text-white bg-adam rounded p-2 absol"><b>Lorem </b>ipsum dolor <b>sit</b> amet <b>consectetur</b>.</div>
+              <div class="card-text">
+              <h5 class="mt-2"><b>Lorem Ipsum</b></h5>
+              <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas tempore placeat ratione alias recusandae vero!</p>
               </div>
             </div>
-            <div class="row row1">
-              <div class="col col1">
-                <button type="button" class="btn btn-adam rounded-pill btn-md mb-5 p-3 btnbanner btnbanner2">KNOW MORE</button>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12 col2 card border-0">
+            <img width="auto" src="./public/images/blog_img2.jpg" alt="" class="card-img-top imginsta">
+            <div class="card-body">
+              <div class="text-white bg-adam rounded p-2 absol"><b>Lorem </b>ipsum dolor <b>sit</b> amet <b>consectetur</b>.</div>
+              <div class="card-text">
+              <h5 class="mt-2"><b>Lorem Ipsum</b></h5>
+              <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas tempore placeat ratione alias recusandae vero!</p>
               </div>
             </div>
+          </div>
+          </div>
+          <div class="row row1">
+            <div class="col col1">
+              <button type="button" class="btn btn-adam rounded-pill btn-md mb-5 p-3 btnbanner btnbanner2">KNOW MORE</button>
+            </div>
+          </div>
         </div>
+      </div>
      </section>
      <!-- testimonials -->
      <div id="bgtesti">
       <div class="row row1">
         <div class="col col1 mt-5">
-          <h2><span>client </span><span class="text-white">testimonials</span></h2>
-          <img src="./public/images/decoration_line.png" alt="">
+          <h2 class="text-center"><span>client </span><span class="text-white">testimonials</span></h2>
+          <img class="wbell" src="./public/images/decoration_line.png" alt="">
         </div>
       </div>
         <div class="row row2 mt-5">
           <div class="col-lg col-md-12 col-sm-12 mt-4 col2 align-items-center">
-            <img src="./public/images/testimonial1.jpg" class="rond" alt="">
+            <img src="./public/images/testimonial1.jpg" class="rond bottomfemme" alt="">
           </div>
           <div class="col-lg col-md-12 col-sm-12 mt-4 mb-5 col2 border border-secondary rounded text-white" id="margright">
             <h5 class="mt-2"><b>Lorem Ipsum</b></h5>
@@ -397,7 +398,7 @@
             <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas tempore placeat ratione alias recusandae vero!</p>
           </div>
             <div class="col-lg col-md-12 col-sm-12 mt-4 col2 align-items-center">
-              <img src="./public/images/testimonial1.jpg" class="rond" alt="">
+              <img src="./public/images/testimonial1.jpg" class="rond topfemme" alt="">
             </div>
           </div>
       </div>
@@ -408,7 +409,7 @@
        <div class="row d-flex mzero">
          <div class="col mt-5 mb-5 d-flex justify-content-center flex-column align-items-center">
           <h2><span>our </span><span>contact</span></h2>
-          <img src="./public/images/decoration_line.png" alt="">
+          <img class="wbell" src="./public/images/decoration_line.png" alt="">
           <div class="rectanglered mt-5 text-center text-white bg-adam roundedred">
             <i class="fas fa-map-marker-alt fa-2x mt-4"></i>
             <p class="ml-4 mr-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Totam, beatae.</p>
@@ -426,8 +427,8 @@
     <!-- footer -->
     <section class="bgfooter">
       <div class="decoftr"></div>
-      <div class="row row2 mt-4">
-        <div class="col col2 ml-5 flex-column text-white mzero">
+      <div class="row row2 mt-4 ml-4">
+        <div class="col col2 flex-column text-white mzero alignsm">
           <h1 class="mb-3 font">about us</h1>
             <p>Lorem ipsum ditate obcaecati quod nobis expedita? Necessitatibus quas perferendis, fugiat nemo dignissimos qui dolores rem, quaerat officia facilis sunt asperiores totam ipsam ad minus aliquid. Obcaecati, corporis! Consequuntur.</p>
           <div class="mb-4">
@@ -437,36 +438,36 @@
             <i class="fab fa-linkedin-in fa-2x p-3"></i>
           </div>
         </div>
-        <div class="col col2 d-flex flex-column text-white mzero">
+        <div class="col-lg col-md-12 col-sm-12 col2 d-flex flex-column alignsm text-white">
           <h1 class="mb-3 font">instagram</h1>
-          <div class="row row2">
-            <div class="col col2"><img src="./public/images/instragram_gallery_img1.jpg" alt=""></div>
-            <div class="col col2"><img src="./public/images/instragram_gallery_img2.jpg" alt=""></div>
-            <div class="col col2"><img src="./public/images/instragram_gallery_img1.jpg" alt=""></div>
-            <div class="col col2"><img src="./public/images/instragram_gallery_img2.jpg" alt=""></div>
+          <div class="row">
+            <div class="col p-0"><img src="./public/images/instragram_gallery_img1.jpg" alt=""></div>
+            <div class="col p-0"><img src="./public/images/instragram_gallery_img2.jpg" alt=""></div>
+            <div class="col p-0"><img src="./public/images/instragram_gallery_img1.jpg" alt=""></div>
+            <div class="col p-0"><img src="./public/images/instragram_gallery_img2.jpg" alt=""></div>
           </div>
-          <div class="row row2 mt-2 mb-4">
-            <div class="col col2"><img src="./public/images/instragram_gallery_img2.jpg" alt=""></div>
-            <div class="col col2"><img src="./public/images/instragram_gallery_img1.jpg" alt=""></div>
-            <div class="col col2"><img src="./public/images/instragram_gallery_img2.jpg" alt=""></div>
-            <div class="col col2"><img src="./public/images/instragram_gallery_img1.jpg" alt=""></div>
+          <div class="row mt-2 mb-4">
+            <div class="col p-0"><img src="./public/images/instragram_gallery_img2.jpg" alt=""></div>
+            <div class="col p-0"><img src="./public/images/instragram_gallery_img1.jpg" alt=""></div>
+            <div class="col p-0"><img src="./public/images/instragram_gallery_img2.jpg" alt=""></div>
+            <div class="col p-0"><img src="./public/images/instragram_gallery_img1.jpg" alt=""></div>
           </div>
         </div>
-        <div class="col col2 d-flex flex-column text-white mzero">
+        <div class="col-lg col-md-12 col-sm-12 col2 d-flex flex-column alignsm text-white mzero">
           <h1 class="mb-3 font">popular tags</h1>
           <div class="row row2 mb-3">
-            <div class="col-lg-3 col2"><button type="button" class="btn btn-adam rounded-pill btnftr">Restaurant</button></div>
-            <div class="col-lg-4 col2"><button type="button" class="btn btn-adam rounded-pill btnftr">Responsive Design</button></div>
-            <div class="col-lg-2 col2"><button type="button" class="btn btn-adam rounded-pill btnftr">Hotel</button></div>
+            <div class="col-lg mt-3 col2"><button type="button" class="btn btn-adam rounded-pill btnftr">Restaurant</button></div>
+            <div class="col-lg col2 mt-3"><button type="button" class="btn btn-adam rounded-pill btnftr" id="repnsmargftr">Responsive Design</button></div>
+            <div class="col-lg col2 mt-3"><button type="button" class="btn btn-adam rounded-pill btnftr">Hotel</button></div>
           </div>
           <div class="row row2 mb-3">
-            <div class="col-lg-3 col2"><button type="button" class="btn btn-adam rounded-pill btnftr">Blog Section</button></div>
-            <div class="col-lg-2 col2"><button type="button" class="btn btn-adam rounded-pill btnftr">SEO</button></div>
-            <div class="col-lg-2 col2"><button type="button" class="btn btn-adam rounded-pill btnftr">Cuisine</button></div>
+            <div class="col-lg col2 mt-3"><button type="button" class="btn btn-adam rounded-pill btnftr">Blog Section</button></div>
+            <div class="col-lg col2 mt-3"><button type="button" class="btn btn-adam rounded-pill btnftr">SEO</button></div>
+            <div class="col-lg col2 mt-3"><button type="button" class="btn btn-adam rounded-pill btnftr">Cuisine</button></div>
           </div>
           <div class="row row2">
-            <div class="col-lg-2 col-md-12 col2"><button type="button" class="btn btn-adam rounded-pill btnftr">Graphic</button></div>
-            <div class="col-lg-2 col2"><button type="button" class="btn btn-adam rounded-pill btnftr">Food</button></div>
+            <div class="col-lg col2 mt-3"><button type="button" class="btn btn-adam rounded-pill btnftr">Graphic</button></div>
+            <div class="col-lg col2 mt-3"><button type="button" class="btn btn-adam rounded-pill btnftr">Food</button></div>
           </div>
         </div>
       </div>
